# kindynfusion

./: .gitignore  CMakeLists.txt  README.md
devices/: CMakeLists.txt
devices/WholeBodyKinematicsDevice/app/: CMakeLists.txt
devices/WholeBodyKinematicsDevice/app/xml/: WholeBodyKinematicsHumanState.xml  WholeBodyKinematics_iFeelSuit_fullBody_1.xml  WholeBodyKinematics_iFeelSuit_fullBody_1_Subject08_FtShoes41_tuned.xml
devices/WholeBodyKinematicsDevice/src/: WholeBodyKinematicsDevice.cpp
devices/WholeBodyKinematicsLogger/app/: CMakeLists.txt
devices/WholeBodyKinematicsLogger/include/KinDynFusion/: WholeBodyKinematicsLogger.h
devices/WholeBodyKinematicsRemapper/include/KinDynFusion/: WholeBodyKinematicsRemapper.h
devices/WholeBodyKinematicsRemapper/src/: WholeBodyKinematicsRemapper.cpp
devices/WholeBodyKinematicsVisualizerDevice/app/xml/: WholeBodyKinematicsVisualizer.xml  WholeBodyKinematicsVisualizerXSensSuit.xml
devices/WholeBodyKinematicsVisualizerDevice/include/KinDynFusion/: WholeBodyKinematicsVisualizer.h
devices/WholeBodyKinematicsWrapper/src/: WholeBodyKinematicsWrapper.cpp
src/lib/: CMakeLists.txt
src/lib/estimation/src/: CoPVertexSchmittTrigger.cpp  DiligentOdom.cpp  WholeBodyKinematics.cpp
src/lib/inversekinematics/: CMakeLists.txt
src/lib/inversekinematics/YarpImplementation/: CMakeLists.txt
src/lib/inversekinematics/YarpImplementation/src/: InverseKinematicsYarpHelper.cpp
src/lib/inversekinematics/src/: IKHelper.cpp  WearableTargets.cpp
src/lib/model/: CMakeLists.txt
src/lib/model/src/: RectangularFoot.cpp
(+81 files in other folders)
