# Copyright (C) 2022 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

add_subdirectory(WholeBodyKinematicsDevice)
add_subdirectory(WholeBodyKinematicsWrapper)
add_subdirectory(WholeBodyKinematicsRemapper)
add_subdirectory(WholeBodyKinematicsVisualizerDevice)
add_subdirectory(WholeBodyKinematicsLogger)

